2007-07-05  Larry Ewing  <lewing@novell.com>

	* configure.in: temporarily add opencv to F checks.

	* libfspot/Makefile.am: link F_LIBS and add f-facedetect.c to the
	build.
	
	* Libfspot/f-facedetect.c (f_detect): use the in memory pixbuf
	don't try to load the file directly.  Compute the dection bounds
	properly.

2007-07-05  Stephane Delcroix  <stephane@delcroix.org>

	* src/Editors/SoftFocus.cs: make the buttons translatable.

2007-07-01  Stephane Delcroix  <stephane@delcroix.org>

	* src/PhotoView.cs: fixing the theming issue with Darkilouche theme.
	Jimmac, you owe me a beer... or some icons ;)

2007-06-30  Ruben Vermeersch  <ruben@savanne.be>

	* src/Db.cs: Don't pass the TagStore to the constructor, if needed, it can
	be accessed through the Db.

	* src/PhotoStore.cs: Access the TagStore through Core.Database. Keeping
	references in the stores is cumbersome. There's a global lookup point,
	let's use it. The TagStore does similar things, this commit just makes it
	all consistent.
	
	Historical note: I've looked up if there was a specific reason why it was
	written like that. It appears this code has been there since the initial
	import, more than three and a half year ago, when there were only three
	stores. We have five now, which would have circular references if we would
	continue to use the old way of working.

2007-06-30  Ruben Vermeersch  <ruben@savanne.be>

	* src/Preferences.cs: Remove unused PreferenceSetting class, add a gconf
	cache, move all default values to one place, make naming consistent.

	* src/LastRollDialog.cs: Remove default values.

2007-06-23  Ruben Vermeersch  <ruben@savanne.be>

	* src/TagCommands.cs: Use the new overload when a tag has been edited.
	Only write XMP metadata when the name has actually changed.

2007-06-23  Ruben Vermeersch  <ruben@savanne.be>

	* src/TagStore.cs: Add a Commit method which writes XMP tags of the
	associated images. Fixes bgo #327107.

2007-06-19  Priit Laes  <plaes@svn.gnome.org>
