@@ -1,6 +1,7 @@
 #include "cv.h"
 #include "highgui.h"
 #include "f-image-view.h"
+#include "f-image-surface.h"
 
 #include <stdio.h>
 #include <stdlib.h>
@@ -12,6 +13,7 @@
 #include <time.h>
 #include <ctype.h>
 
+
 #ifdef _EiC
 #define WIN32
 #endif
@@ -19,89 +21,78 @@
 static CvMemStorage* storage = 0;
 static CvHaarClassifierCascade* cascade = 0;
 
-GdkRegion * detect_and_draw( IplImage* image, FImageView *image_view );
+GList * detect_and_draw( IplImage* image, FImageView *image_view );
 
 
 const char* cascade_name =
     "haarcascade_frontalface_alt.xml";
 /*    "haarcascade_profileface.xml";*/
 
-int f_detect (char *cascadeName, 
-		char *fileName,
-		FImageView *image_view)
+GList *
+f_detect (char *cascadeName, 
+	  char *fileName,
+	  FImageView *image_view)
 {
     CvCapture* capture = 0;
     IplImage *frame, *frame_copy = 0;
     int optlen = strlen("--cascade=");
     const char* input_name;
-	printf("CASCADE %s\n FILENAME %s\n",cascadeName, fileName);
-//    if( strncmp( cascadeName, "--cascade=", optlen ) == 0 )
-//    {
-//        cascade_name = cascadeName + optlen;
-//        input_name = argc > 2 ? argv[2] : 0;
-//    }
-	if(strlen(cascadeName))
-	{
-	   cascade_name = cascadeName;
-	   input_name	= fileName;
-	}
-    else
-    {
-        cascade_name = "/usr/share/opencv/haarcascades/haarcascade_frontalface_default.xml";
-        input_name = fileName;
+    GList *results = NULL;
+
+    printf("CASCADE %s\n FILENAME %s\n",cascadeName, fileName);
+    
+    if(strlen(cascadeName)) {
+	    cascade_name = cascadeName;
+	    input_name	= fileName;
+    } else {
+	    cascade_name = "/usr/share/opencv/haarcascades/haarcascade_frontalface_default.xml";
+	    input_name = fileName;
     }
 
     cascade = (CvHaarClassifierCascade*)cvLoad( cascade_name, 0, 0, 0 );
     
-    if( !cascade )
-    {
-        fprintf( stderr, "ERROR: Could not load classifier cascade\n" );
-        fprintf( stderr,
-        "Usage: facedetect --cascade=\"<cascade_path>\" [filename|camera_index]\n" );
-        return -1;
+    if (!cascade) {
+	    g_warning ("Could not load classifier cascade\n");
+	    return NULL;
     }
+
     storage = cvCreateMemStorage(0);
+
+    GdkPixbuf *pixbuf = image_view_get_pixbuf (IMAGE_VIEW(image_view));
+    int width = gdk_pixbuf_get_width (pixbuf);
+    int height = gdk_pixbuf_get_height (pixbuf);
+    cairo_surface_t *surface = f_pixbuf_to_cairo_surface (pixbuf);
     
-    cvNamedWindow( "result", 1 );
-
-        const char* filename = input_name ? input_name : (char*)"lena.jpg";
-        //IplImage* image = cvLoadImage( filename, 1 );
-		GdkPixbuf *pixbuf = image_view_get_pixbuf (IMAGE_VIEW(image_view));
-	int width = gdk_pixbuf_get_width (pixbuf);
-	int height = gdk_pixbuf_get_height (pixbuf);
-	cairo_surface_t *surface = f_pixbuf_to_cairo_surface (pixbuf);
-
-        IplImage* image = cvCreateImage( cvSize (width, height), 8, 4);
-        if( image )
-        {
-		guchar *src = f_image_surface_get_data (surface);
-		guchar *dest = image->imageData;
-		
-		int i;
-		for (i = 0; i < height; i++) {
-			memcpy (dest, src, width * 4);
-			dest += image->widthStep;
-			src += 4* width;
-		}
-		
-		detect_and_draw( image, image_view );
-		cvWaitKey(0);
-		cvReleaseImage( &image );
-        }
-
-	cairo_surface_destroy (surface);
- //   cvDestroyWindow("result");
-
-    return 0;
+    IplImage* image = cvCreateImage( cvSize (width, height), 8, 4);
+    if( image ) {
+	    guchar *src = f_image_surface_get_data (surface);
+	    guchar *dest = image->imageData;
+	    
+	    int i;
+	    for (i = 0; i < height; i++) {
+		    memcpy (dest, src, width * 4);
+		    dest += image->widthStep;
+			    src += 4* width;
+	    }
+	    
+	    results = detect_and_draw( image, image_view );
+	    cvWaitKey(0);
+	    cvReleaseImage( &image );
+    }
+    
+    cairo_surface_destroy (surface);
+    //   cvDestroyWindow("result");
+    
+    return results;
 }
 
-GdkRegion *
+GList *
 detect_and_draw( IplImage* img, FImageView *image_view)
 {
 	GdkRectangle zone, zone1;
 	cairo_t *ctx;
 	GdkRegion *selection;
-	GdkRegion *other;
+	GList *other = NULL;
 	GdkRectangle rect;
 
     static CvScalar colors[] = 
@@ -129,7 +120,7 @@ detect_and_draw( IplImage* img, FImageView *image_view)
     cvClearMemStorage( storage );
     if( cascade )
     {
-	other = gdk_region_new ();
+	other = NULL;
         double t = (double)cvGetTickCount();
         CvSeq* faces = cvHaarDetectObjects( small_img, cascade, storage,
                                             1.1, 2, 0/*CV_HAAR_DO_CANNY_PRUNING*/,
@@ -156,24 +147,34 @@ detect_and_draw( IplImage* img, FImageView *image_view)
 
 	    printf("rect (%d %d %d %d) zone (%d %d %d %d) \n", r->x, r->y, r->width, r->height, zone.x, zone.y, zone.width, zone.height);
 
-	    gdk_region_union_with_rect (other, &zone);
+	    //gdk_region_union_with_rect (other, &zone);
+	    GdkRectangle *rect = g_new (GdkRectangle, 1);
+	    *rect = zone;
+	    other = g_list_prepend (other, rect);
 
-            CvPoint center;
-            int radius;
-            center.x = cvRound((r->x + r->width*0.5)*scale);
-            center.y = cvRound((r->y + r->height*0.5)*scale);
-            radius = cvRound((r->width + r->height)*0.25*scale);
-            cvCircle( img, center, radius, colors[i%8], 3, 8, 0 );
+            //CvPoint center;
+            //int radius;
+            //center.x = cvRound((r->x + r->width*0.5)*scale);
+            //center.y = cvRound((r->y + r->height*0.5)*scale);
+	    // radius = cvRound((r->width + r->height)*0.25*scale);
+            //cvCircle( img, center, radius, colors[i%8], 3, 8, 0 );
         }
     }
 
-    cvShowImage( "result", img );
+    //cvShowImage( "result", img );
 	ctx = gdk_cairo_create (GTK_WIDGET (image_view)->window);
-	cairo_set_source_rgba (ctx, .5, .2, .2, .7);
-	gdk_cairo_region (ctx, other);
-	cairo_fill (ctx);
+	cairo_set_source_rgba (ctx, 1, 1, 0, .7);
+
+	GList *l = other;
+	while (l) {
+		gdk_cairo_rectangle(ctx, (GdkRectangle *)(l->data));
+		//g_free (l->data);
+		l = l->next;
+	}
+	//g_list_free (other);
+
+	cairo_stroke (ctx);
 	cairo_destroy (ctx);
-    gdk_region_destroy (other);
 
     cvReleaseImage( &gray );
     cvReleaseImage( &small_img );
